<resources>
    <string name="app_name">Rigidity Arm App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_connection">Start Connection</string>
    <string name="level_1">level 1</string>
    <string name="level_2">level 2</string>
    <string name="level_3">level 3</string>
    <string name="send">Send</string>
    <string name="discover">Discover</string>
    <string name="on_off">ON/OFF</string>
    <string name="enable_discoverable">Enable Discoverable</string>
    <string name="level_0">level 0</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="studentMode">Student Mode</string>
    <string name="instracorMode">Instructor Mode</string>
    <string name="rigidity_leadpipe">Rigidity Leadpipe</string>
    <string name="rigidity_cogwheel">Rigidity Cogwheel</string>
    <string name="Spasticity">Spasticity</string>
    <string name="UPDRS0">UPDRS0</string>
    <string name="UPDRS1">UPDRS1</string>
    <string name="UPDRS2">UPDRS2</string>
    <string name="UPDRS3">UPDRS3</string>
    <string name="_1sd">-1SD</string>
    <string name="_sd">+1SD</string>
    <string name="AVG">Average</string>
    <string name="maso3">MASO3</string>
    <string name="maso2">MASO 2</string>
    <string name="maso2">MASO 2</string>
    <string name="maso1">MASO 1</string>
    <string name="maso0">MASO 0</string>
</resources>