<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/mainID">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_gravity="top"
        android:src="@drawable/background"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnBackIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#FF5722"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                >
            </Button>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="#EEFFFFFF"
            android:orientation="horizontal"
            android:padding="20dp">



            <Button
                android:id="@+id/btnlevel0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnStartConnection"
                android:backgroundTint="#80000098"
                android:text="@string/UPDRS0"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnlevel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnStartConnection"
                android:layout_toEndOf="@id/btnlevel0"
                android:layout_toRightOf="@id/btnlevel0"
                android:backgroundTint="#80000098"
                android:text="@string/UPDRS1"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnlevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnStartConnection"
                android:layout_toEndOf="@id/btnlevel1"
                android:layout_toRightOf="@id/btnlevel2"
                android:backgroundTint="#80000098"
                android:text="@string/UPDRS2"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnlevel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnStartConnection"
                android:layout_toEndOf="@id/btnlevel2"
                android:layout_toRightOf="@id/btnlevel2"
                android:backgroundTint="#80000098"
                android:text="@string/UPDRS3"
                tools:targetApi="lollipop" />


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />




            <Button
                android:id="@+id/btn_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnlevel0"

                android:backgroundTint="#80000098"
                android:text="@string/_1sd"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnAvg"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnlevel1"
                android:layout_gravity=""
                android:layout_toEndOf="@id/btn_sd"
                android:layout_toRightOf="@id/btn_sd"
                android:backgroundTint="#80000098"
                android:text="@string/AVG"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn1SD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnlevel1"
                android:layout_toEndOf="@id/btnAvg"
                android:backgroundTint="#80000098"
                android:text="@string/_sd"
                tools:targetApi="lollipop"
                android:layout_toRightOf="@id/btnAvg" />

            <Button
                android:id="@+id/btnSend"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_sd"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#80000098"
                android:text="@string/send"
                app:icon="@drawable/baseline_send_black_24dp"
                tools:targetApi="lollipop" />





        </RelativeLayout>


    </LinearLayout>


</FrameLayout>