<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/MainScreen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="506dp"
        android:layout_gravity="top"
        android:scaleType="fitEnd"
        android:src="@drawable/background" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnONOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/on_off"
            app:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop"
            >
        </Button>

        <Button
            android:id="@+id/btnDiscoverable_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnONOFF"
            android:onClick="btnEnableDisable_Discoverable"
            android:text="@string/enable_discoverable"
            android:layout_gravity="center"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop"
            app:icon="@drawable/baseline_settings_bluetooth_black_24dp"/>
        <Button
            android:id="@+id/btnFindUnpairedDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnONOFF"
            android:text="@string/discover"
            android:layout_gravity="center"
            android:onClick="btnDiscover"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop"
            app:icon="@drawable/baseline_sensors_black_24dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:orientation="horizontal"

            android:layout_gravity="center">

            <ListView
                android:id="@+id/lvNewDevices"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                />

        </LinearLayout>


        <Button
            android:id="@+id/btnStartConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FF5722"
            android:text="@string/start_connection"
            android:layout_gravity="center"
            tools:targetApi="lollipop"
            app:icon="@drawable/baseline_sensors_black_24dp" />


        <Button
            android:id="@+id/btnInstructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FF5722"
            android:text="@string/instracorMode"
            android:layout_marginBottom="10dp"
            tools:targetApi="lollipop"
            style="@style/Widget.MaterialComponents.Button"
            app:icon="@drawable/ic_action_friends"/>

        <Button
            android:id="@+id/btnStudent"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnInstructor"
            android:layout_gravity="center"
            android:backgroundTint="#FF5722"
            android:text="@string/studentMode"
            app:icon="@drawable/ic_action_friends"
            tools:targetApi="lollipop" />


    </LinearLayout>


</FrameLayout>