<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/selectFrame"
    android:background="#13294B"
    tools:context=".InSelect">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom"
        android:src="@drawable/background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_gravity="top">

        <Button
            android:id="@+id/btnBackSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#FF5722"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            >
        </Button>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >


        <Button
            android:id="@+id/btnRigidity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/rigidity_leadpipe"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop"
            >
        </Button>

        <Button
            android:id="@+id/btnRigidity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRigidity1"
            android:layout_centerHorizontal="true"
            android:text="@string/rigidity_cogwheel"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/btnSpasticity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRigidity2"
            android:text="@string/Spasticity"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FF5722"
            tools:targetApi="lollipop" />

    </RelativeLayout>


</FrameLayout>